# sbo-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc.js  Dockerfile  LICENSE  README.md  docker-compose.yml  lambda-entrypoint.sh  package-lock.json  package.json  renovate.json  run-e2e-tests.sh  seed.sh
.github/: renovate.json
.github/scripts/: update-lambda-insights-extension.sh
.github/workflows/: ci.yml  codeberg-sync.yml  deploy.yml  update-aws-lambda-insights-extension.yml
e2e-tests/: eslint-pre-commit.sh  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  vitest.config.ts
e2e-tests/src/codeberg/: index.ts
e2e-tests/src/github/: index.ts
e2e-tests/src/gitlab/: index.ts
e2e-tests/src/jenkins/: index.ts
e2e-tests/tests/e2e/: codeberg.test.ts  github.test.ts  gitlab.test.ts
github/: .dockerignore  .eslintrc.js  .npmrc  .prettierrc.json  Dockerfile  app.yml  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  startup.sh  tsconfig.json
github/src/: fetch_env.ts  index.ts  server.ts
github/test/: index.test.ts
gitlab/: .dockerignore  Dockerfile  lambda-entrypoint.sh  pyproject.toml  startup.sh
gitlab/sbobot/: api.py  auth.py  config.py  deps.py  fastapi.py  fetch_env.py  main.py  parser.py  state.py
gitlab/tests/integration/: test_fetch_env.py
gitlab/tests/integration/sbobot/: test_fetch_env.py
gitlab/tests/unit/sbobot/: test_parser.py
src/: fetch_env.ts  index.ts
test/: index.test.ts
test/fixtures/: issues.opened.json
tf/: .terraform.lock.hcl  config.tf  main.tf  variables.tf
webhook-api/: .dockerignore  .test.env  Dockerfile  pyproject.toml  startup.sh
webhook-api/sbobot/: deps.py  fastapi.py  fetch_env.py  healthcheck.py  jenkins.py  main.py  permissions.py  state.py
webhook-api/sbobot/codeberg/: auth.py  route.py
webhook-api/sbobot/gitlab/: parser.py  route.py
webhook-api/sbobot/parser/: __init__.py  codeberg.py  gitlab.py
webhook-api/tests/unit/sbobot/: test_jenkins.py  test_permissions.py
webhook-api/tests/unit/sbobot/gitlab/: test_parser.py
webhook-api/tests/unit/sbobot/parser/: test_codeberg.py  test_gitlab.py
