[project]
name = "sbobot"
version = "0.0.1"
description = ""
requires-python = "==3.12.11"

dependencies = [
  "aiohttp==3.12.13",
  "boto3==1.38.46",
  "fastapi-slim==0.115.13",
  "orjson==3.10.18",
  "python-gitlab==6.1.0",
  "structlog==25.3.0",
  "uvicorn[standard]==0.34.2",
  "yarl==1.20.0",
]

[tool.uv]
dev-dependencies = [
  "boto3-stubs-lite[ssm]==1.38.46",
  "pyright==1.1.400",
  "pytest==8.4.1",
  "pytest-dotenv==0.5.2",
  "ruff==0.11.13",
  "ruff-lsp==0.0.62",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".test.env"]
filterwarnings = [
  "error",
  "ignore:datetime.datetime.utcnow",               # TODO boto3 currently emits a Warning on python 3.12.
  "ignore:datetime.datetime.utcfromtimestamp",     # TODO boto3 currently emits a Warning on python 3.12.
]


[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
 "D", # disable docstring checks
 "E501", # black handles long line wrapping
 "COM812", # conflicts with ruff format
 "ISC001", # conflicts with ruff format
]
target-version = "py312"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # allow assert in tests
]

[tool.ruff.lint.pylint]
max-branches = 30
max-statements = 60
