[project]
name = "sbobot"
version = "0.0.1"
description = ""
requires-python = "==3.12.13"

dependencies = [
  "aiohttp==3.13.5",
  "boto3==1.42.91",
  "fastapi==0.136.1",
  "orjson==3.11.8",
  "python-gitlab==8.3.0",
  "structlog==25.5.0",
  "uvicorn[standard]==0.46.0",
  "yarl==1.23.0",
]

[dependency-groups]
dev = [
  "boto3-stubs-lite[ssm]==1.42.91",
  "pyright==1.1.409",
  "pytest==9.0.3",
  "pytest-env==1.6.0",
  "ruff==0.15.10",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.pytest_env]
env_files = [".test.env"]

always_override = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
 "D", # disable docstring checks
 "E501", # black handles long line wrapping
 "COM812", # conflicts with ruff format
 "ISC001", # conflicts with ruff format
]
target-version = "py312"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # allow assert in tests
]

[tool.ruff.lint.pylint]
max-branches = 30
max-statements = 60
