[project]
name = "sbobot"
version = "0.0.1"
description = ""
requires-python = "==3.12.13"

dependencies = [
  "aiohttp==3.14.1",
  "boto3==1.43.36",
  "fastapi==0.136.3",
  "orjson==3.11.9",
  "pyforgejo==2.0.7",
  "python-gitlab==8.4.0",
  "structlog==26.1.0",
  "uvicorn[standard]==0.49.0",
  "yarl==1.24.2",
]

[dependency-groups]
dev = [
  "boto3-stubs-lite[ssm]==1.43.36",
  "pyright==1.1.411",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-env==1.6.0",
  "ruff==0.15.20",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

# [tool.uv]
# exclude-newer = "7d"
# exclude-newer-package = { ruff = "2026-06-18T19:30:00Z", boto3 = "2026-06-19T20:00:00Z", boto3-stubs-lite = "2026-06-19T21:00:00Z", botocore = "2026-06-19T20:00:00Z", s3transfer = "2026-06-16T20:00:00Z" }

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

filterwarnings = ["error"]

[tool.pytest_env]
env_files = [".test.env"]

always_override = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
 "D", # disable docstring checks
 "E501", # black handles long line wrapping
 "COM812", # conflicts with ruff format
 "ISC001", # conflicts with ruff format
]
target-version = "py312"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # allow assert in tests
]

[tool.ruff.lint.pylint]
max-branches = 30
max-statements = 60
